@@ -2522,9 +2522,11 @@ Module options:
 \titem{access\_admin} \ind{options!access\_admin}This option specifies
   who is allowed to administrate the Multi-User Chat service (the default
   value is \term{none}, which means that only the room creator can
-  administer his room). By sending a message to the service JID,
-  administrators can send service messages that will be displayed in every
-  active room.
+  administer his room).
+  The administrators can send a normal message to the service JID,
+  and it will be shown in every active room as a service message.
+  The administrators can send a groupchat message to the JID of an active room,
+  and the message will be shown in the room as a service message.
 \titem{history\_size} \ind{options!history\_size}A small history of
   the current discussion is sent to users when they enter the
   room. With this option you can define the number of history messages
