@@ -1,5 +1,10 @@
 2008-06-13  Badlop  <badlop@process-one.net>
 
+	* src/mod_muc/mod_muc_room.erl: Allow admins to send messages to
+	rooms even if not joined (EJAB-645)
+	* doc/guide.tex: Likewise
+	* doc/guide.html: Likewise
+
 	* src/ejabberd.cfg.example: Add registration_timeout (EJAB-653)
 
 	* doc/guide.tex: Table of listener modules converted to
